force-app/main/default/objects/AFSS_EmailLog__c/AFSS_EmailLog__c.object-meta.xml
<CustomObject>
    <label>AFSS_EmailLog</label>
    <nameField>
        <label>AFSS_ Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AFSS_EmailLogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>