force-app/main/default/objects/AFSS_EmailLog__c/fields/BccAddress__c.field-meta.xml
<CustomField>
    <fullName>BccAddress__c</fullName>
    <label>BccAddress</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>