force-app/main/default/objects/AFSS_EmailLog__c/fields/CcAddress__c.field-meta.xml
<CustomField>
    <fullName>CcAddress__c</fullName>
    <label>CcAddress</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>