force-app/main/default/objects/AFSS_EmailLog__c/fields/FromAddress__c.field-meta.xml
<CustomField>
    <fullName>FromAddress__c</fullName>
    <label>FromAddress</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>