force-app/main/default/objects/AFSS_EmailLog__c/fields/HtmlBody__c.field-meta.xml
<CustomField>
    <fullName>HtmlBody__c</fullName>
    <label>HtmlBody</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>