force-app/main/default/objects/AFSS_EmailLog__c/fields/TextBody__c.field-meta.xml
<CustomField>
    <fullName>TextBody__c</fullName>
    <label>TextBody</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>